# game-67-idle

./: .gitattributes  .gitignore  .rgignore  AGENTS.md  AI_PIPELINE.md  AI_PIPELINE_HISTORY.md  AI_PIPELINE_ITERATION_LOG.md  AI_PIPELINE_OBSERVABILITY_TOOLS.md  AI_PIPELINE_RETROSPECTIVE_2026-06-13.md  AI_PIPELINE_SESSION_PROFILING.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  GAME_PROJECT.md  README.md  REFACTOR_NEXT_SESSION.md  REFACTOR_PLAN.md  grep.exe.stackdump  init.sh
extensions/experimental/skeletal_animation/: CMakeLists.txt  README.md
extensions/experimental/skeletal_animation/docs/: known-defects.md  skinned_mesh_renderer_contract_v001.md
extensions/experimental/skeletal_animation/src/: nt_skeletal_animation_ozz.cpp  nt_skeletal_mesh_cpu.cpp
extensions/experimental/skeletal_animation/tools/: skeletal_animation_ozz_probe.c  skeletal_mesh_contract_probe.c  verify_quarantine.cmake
extensions/skeletal_animation/: CMakeLists.txt
extensions/skeletal_animation/docs/: skinned_mesh_renderer_contract_v001.md
extensions/skeletal_animation/include/skeletal_animation/: nt_skeletal_animation.h  nt_skeletal_mesh.h
extensions/skeletal_animation/src/: nt_skeletal_mesh_cpu.cpp
extensions/skeletal_animation/tools/: skeletal_animation_ozz_probe.c  skeletal_mesh_contract_probe.c
features/audio-core/benchmarks/: CMakeLists.txt  README.md  native_latency.c  run.ps1  run_web.ps1  verify_results.mjs
games/rb-dark-rpg/: CMakeLists.txt  README.md  dependencies.json  game.json
games/rb-dark-rpg/.ai_studio/: README.md  workspace.json
games/rb-dark-rpg/.ai_studio/evidence/: README.md
games/rb-dark-rpg/assets/audio/: README.md  manifest.json
games/rb-dark-rpg/assets/characters/: last_post_guard_05.provenance.md
games/rb-dark-rpg/assets/meshes/: cube.glb
games/rb-dark-rpg/assets/scenes/: gate_outskirts_background_1280x700.provenance.md  last_post_background_candidate05_1280x700.provenance.md  (+1 more)
games/rb-dark-rpg/design/: README.md  combat_entry_ux_v1.md  combat_mechanics.md  combat_reward_loop_v1.md  concept.md  content_editor_spec.md  content_model.md  equipment_item_model.md  gdd.md  location_sprite_review_2026-07-05.md  quest_system.md  release_30_minute_balance.md  world_map_v1.md
games/rb-dark-rpg/devapi/: README.md  responsive_viewports.py  scenarios.py  scenarios_test.py
games/rb-dark-rpg/src/: build_packs.c  game_actions.c  game_actions.h  game_audio.c  game_audio.h  game_combat.c  game_combat.h  game_content.h  game_dialogue.c  game_dialogue.h  game_persistence.c  game_persistence.h  game_storage.c  game_storage.h  main.c
games/rb-dark-rpg/state/: game_state.schema.json
games/rb-dark-rpg/tests/: test_game_audio.c  test_game_combat.c  test_game_dialogue.c  test_game_persistence.c  test_scene_interactions.c  test_scene_layout.c  test_scene_shop_stub.c  test_world_map_viewport.c  test_world_story.c
games/rb-dark-rpg/tools/: dev_rebuild.sh  generate_dialogue_content.py  generate_equipment_icons.py  generate_equipment_icons_test.py  generate_world_map_art.py  generate_world_map_art_test.py  package_web.sh  run_tests.sh  validate_content_compatibility.py
template/: CMakeLists.txt  CONVENTIONS.md  PLAN.md  README.md
template/assets/shaders/: slug_text.vert
template/assets/ui/: README.md
template/src/: build_packs.c  game_devapi_ui.c  main.c
template/src/render/: render_mesh.c  render_mesh.h
template/src/systems/: sys_move.h  sys_settings.c  sys_settings.h
template/src/ui/: hud.c  theme.c
template/src/world/: world.h
template/state/: game_state.schema.json
template/state/fixtures/: wrong_document.json
template/state/migrations/: v0_to_v1.c
templates/template/: .gitignore  .rgignore  CMakeLists.txt  CONVENTIONS.md  README.md  game-dependencies.json  items.lua.json  template.json
templates/template/.ai_studio/: README.md  workspace.json
templates/template/cmake/: GameAssets.cmake  GameCodegen.cmake  GameOptions.cmake  GamePlatform.cmake  GameTests.cmake
templates/template/content/: item_fields.schema.json  items.json  items.lock.json  progression.json
templates/template/design/: README.md  concept.md  gdd.md
templates/template/devapi/: README.md  smoke_bot.py  smoke_bot_test.py  web_check_failures_test.py
templates/template/release/: README.md
templates/template/src/: build_packs.c  game_analytics.c  game_audio.c  game_audio.h  game_devapi_ui.h  game_event_desc.h  game_event_render.c  game_events.h  game_events_devapi.c  game_events_devapi.h  game_fragment.c  game_items.c  game_items.h  game_items_devapi.c  game_log.c  game_log.h  game_save.c  game_save.h  game_save_devapi.c  game_state_json.c  game_state_json.h  game_storage.c  game_storage.h  iteration_proof_devapi.c  iteration_proof_devapi.h  main.c  platform_lifecycle.c  platform_lifecycle.h  runtime_build_marker.c  runtime_build_marker.h
templates/template/state/: game_state.schema.json  items.schema.json  progression.schema.json  settings.schema.json
templates/template/tests/: items_runtime_test_catalog.c  items_runtime_test_catalog.h  test_game_analytics.c  test_game_audio.c  test_game_event_render.c  test_game_events.c  test_game_events_typed.c  test_game_save.c  test_game_state_json.c  test_game_state_nested.c  test_game_state_roundtrip.c  test_game_storage.c  test_items_api.c  test_items_api_core_only.c  test_items_catalog.c  test_items_fragment.c  test_items_runtime_package.c  test_items_runtime_resource.c  test_platform_lifecycle.c  test_platform_sdk.c  test_platform_sdk_events.c  test_progression.c  test_progression_catalog.c  test_progression_curve.c  test_template_composition.c  web_devapi_check.py  web_persistence_check.py
templates/template/tools/: browser_smoke.mjs  browser_smoke.test.mjs  build_web.mjs  build_web.sh  build_web.test.mjs  game.mjs  game.test.mjs  generate_items_catalog.py  items_ops.py  items_ops_test.py  package_web.mjs  package_web.test.mjs  package_web_smoke.mjs  package_web_smoke.test.mjs  portal_evidence.mjs  portal_evidence.test.mjs  serve_web.mjs  studio_root.test.mjs
templates/template/web/: index.html.in
(+4542 files in other folders)
